@@ -1,108 +1,160 @@
-kitchensink: Assortment of technologies including Arquillian
-========================
-Author: Pete Muir  
-Level: Intermediate  
-Technologies: CDI, JSF, JPA, EJB, JAX-RS, BV  
-Summary: The `kitchensink` quickstart demonstrates a Java EE 7 web-enabled database application using JSF, CDI, EJB, JPA, and Bean Validation.  
-Target Product: JBoss EAP  
-Source: <https://github.com/jboss-developer/jboss-eap-quickstarts/>  
-
-What is it?
------------
-
-The `kitchensink` quickstart is a deployable Maven 3 project designed to help you get your foot in the door developing with Java EE 7 on Red Hat JBoss Enterprise Application Platform. 
-
-It demonstrates how to create a compliant Java EE 7 application using JSF, CDI, JAX-RS, EJB, JPA, and Bean Validation. It also includes a persistence unit and some sample persistence and transaction code to introduce you to database access in enterprise Java. 
-
-_Note: This quickstart uses the H2 database included with Red Hat JBoss Enterprise Application Platform 7. It is a lightweight, relational example datasource that is used for examples only. It is not robust or scalable, is not supported, and should NOT be used in a production environment!_
-
-_Note: This quickstart uses a `*-ds.xml` datasource configuration file for convenience and ease of database configuration. These files are deprecated in JBoss EAP and should not be used in a production environment. Instead, you should configure the datasource using the Management CLI or Management Console. Datasource configuration is documented in the [Configuration Guide](https://access.redhat.com/documentation/en/red-hat-jboss-enterprise-application-platform/) for Red Hat JBoss Enterprise Application Platform._
-
-System requirements
--------------------
-
-The application this project produces is designed to be run on Red Hat JBoss Enterprise Application Platform 7 or later. 
-
-All you need to build this project is Java 8.0 (Java SDK 1.8) or later and Maven 3.1.1 or later. See [Configure Maven for JBoss EAP 7](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CONFIGURE_MAVEN_JBOSS_EAP7.md#configure-maven-to-build-and-deploy-the-quickstarts) to make sure you are configured correctly for testing the quickstarts.
-
- 
-Use of EAP7_HOME
----------------
-
-In the following instructions, replace `EAP7_HOME` with the actual path to your JBoss EAP installation. The installation path is described in detail here: [Use of EAP7_HOME and JBOSS_HOME Variables](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/USE_OF_EAP7_HOME.md#use-of-eap_home-and-jboss_home-variables).
+Red Hat JBoss Enterprise Application Platform (JBoss EAP) Quickstarts
+====================
+Summary: The quickstarts demonstrate Java EE 7 and a few additional technologies from the JBoss stack. They provide small, specific, working examples that can be used as a reference for your own project.
 
 
-Start the JBoss EAP Server
--------------------------
+Introduction
+------------
 
-1. Open a command prompt and navigate to the root of the JBoss EAP directory.
-2. The following shows the command line to start the server:
+These quickstarts run on Red Hat JBoss Enterprise Application Platform 7 or later. We recommend using the JBoss EAP ZIP file. This version uses the correct dependencies and ensures you test and compile against your runtime environment. 
 
-        For Linux:   EAP7_HOME/bin/standalone.sh
-        For Windows: EAP7_HOME\bin\standalone.bat
+Be sure to read this entire document before you attempt to work with the quickstarts. It contains the following information:
 
- 
-Build and Deploy the Quickstart
--------------------------
+* [Available Quickstarts](#available-quickstarts): List of the available quickstarts and details about each one.
 
-1. Make sure you have started the JBoss EAP server as described above.
-2. Open a command prompt and navigate to the root directory of this quickstart.
-3. Type this command to build and deploy the archive:
+* [Suggested Approach to the Quickstarts](#suggested-approach-to-the-quickstarts): A suggested approach on how to work with the quickstarts.
 
-        mvn clean install wildfly:deploy
+* [System Requirements](#system-requirements): List of software required to run the quickstarts.
 
-4. This will deploy `target/jboss-kitchensink.war` to the running instance of the server.
- 
+* [Configure Maven](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CONFIGURE_MAVEN_JBOSS_EAP7.md#configure-maven-to-build-and-deploy-the-quickstarts): How to configure the Maven repository for use by the quickstarts.
 
-Access the application 
+* [Run the Quickstarts](#run-the-quickstarts): General instructions for building, deploying, and running the quickstarts.
+
+* [Run the Arquillian Tests](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/RUN_ARQUILLIAN_TESTS.md#run-the-arquillian-tests): How to run the Arquillian tests provided by some of the quickstarts.
+
+* [Optional Components](#optional-components): How to install and configure optional components required by some of the quickstarts.
+
+* [Contributing Guide](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CONTRIBUTING.md#jboss-developer-contributing-guide): This document contains information targeted for developers who want to contribute to JBoss developer projects.
+
+Use of EAP7_HOME and JBOSS_HOME Variables
+---------------------------------
+
+The quickstart README files use the *replaceable* value `EAP7_HOME` to denote the path to the JBoss EAP installation. When you encounter this value in a README file, be sure to replace it with the actual path to your JBoss EAP installation. The installation path is described in detail here: [Use of EAP7_HOME and JBOSS_HOME Variables](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/USE_OF_EAP7_HOME.md#use-of-eap_home-and-jboss_home-variables).
+
+
+Available Quickstarts
 ---------------------
 
-The application will be running at the following URL: <http://localhost:8080/jboss-kitchensink/>.
+All available quickstarts can be found here: <http://www.jboss.org/developer-materials/#!formats=jbossdeveloper_quickstart>. You can filter by the quickstart name, the product, and the technologies demonstrated by the quickstart. You can also limit the results based on skill level and date published. The resulting page provides a brief description of each matching quickstart, the skill level, and the technologies used. Click on the quickstart to see more detailed information about how to run it. Some quickstarts require deployment of other quickstarts. This information is noted in the `Prerequisites` section of the quickstart README file.
+
+_Note_: Some of these quickstarts use the H2 database included with JBoss EAP. It is a lightweight, relational example datasource that is used for examples only. It is not robust or scalable, is not supported, and should NOT be used in a production environment!
 
 
-Server Log: Expected warnings and errors
------------------------------------
-
-_Note:_ You will see the following warnings in the server log. You can ignore these warnings.
-
-    WFLYJCA0091: -ds.xml file deployments are deprecated. Support may be removed in a future version.
-
-    HHH000431: Unable to determine H2 database version, certain features may not work
+[TOC-quickstart]
 
 
-Undeploy the Archive
---------------------
+Suggested Approach to the Quickstarts
+-------------------------------------
 
-1. Make sure you have started the JBoss EAP server as described above.
-2. Open a command prompt and navigate to the root directory of this quickstart.
-3. When you are finished testing, type this command to undeploy the archive:
+We suggest you approach the quickstarts as follows:
+
+* Regardless of your level of expertise, we suggest you start with the **helloworld** quickstart. It is the simplest example and is an easy way to prove your server is configured and started correctly.
+* If you are a beginner or new to JBoss, start with the quickstarts labeled **Beginner**, then try those marked as **Intermediate**. When you are comfortable with those, move on to the **Advanced** quickstarts.
+* Some quickstarts are based upon other quickstarts but have expanded capabilities and functionality. If a prerequisite quickstart is listed, be sure to deploy and test it before looking at the expanded version.
+
+
+System Requirements
+-------------------
+
+The applications these projects produce are designed to be run on Red Hat JBoss Enterprise Application Platform 7 or later. 
+
+All you need to build these projects is Java 8.0 (Java SDK 1.8) or later and Maven 3.1.1 or later. See [Configure Maven for JBoss EAP 7](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CONFIGURE_MAVEN_JBOSS_EAP7.md#configure-maven-to-build-and-deploy-the-quickstarts) to make sure you are configured correctly for testing the quickstarts.
+
+To run these quickstarts with the provided build scripts, you need the JBoss EAP distribution ZIP. For information on how to install and run JBoss, see the [Red Hat JBoss Enterprise Application Platform Documentation](https://access.redhat.com/documentation/en/red-hat-jboss-enterprise-application-platform/) _Getting Started Guide_ located on the Customer Portal.
+
+You can also use [JBoss Developer Studio or Eclipse](#use-jboss-developer-studio-or-eclipse-to-run-the-quickstarts) to run the quickstarts. 
+
+
+Run the Quickstarts
+-------------------
+
+The root folder of each individual quickstart contains a README file with specific details on how to build and run the example. In most cases you do the following:
+
+* [Start the JBoss EAP Server](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/START_JBOSS_EAP.md#start-the-jboss-eap-server)
+* [Build and deploy the quickstarts](#build-and-deploy-the-quickstarts)
+
+
+### Build and Deploy the Quickstarts
+
+See the README file in each individual quickstart folder for specific details and information on how to run and access the example. 
+
+
+#### Build the Quickstart Archive
+
+In most cases, you can use the following steps to build the application to test for compile errors or to view the contents of the archive. See the specific quickstart README file for complete details.
+
+1. Open a command prompt and navigate to the root directory of the quickstart you want to build.
+2. Use this command if you only want to build the archive, but not deploy it:
+
+            mvn clean install
+
+#### Build and Deploy the Quickstart Archive
+
+In most cases, you can use the following steps to build and deploy the application. See the specific quickstart README file for complete details.
+
+1. Make sure you start the JBoss EAP server as described in the quickstart README file.
+2. Open a command prompt and navigate to the root directory of the quickstart you want to run.
+3. Use this command to build and deploy the archive:
+
+            mvn clean install wildfly:deploy
+ 
+#### Undeploy an Archive
+
+The command to undeploy the quickstart is simply: 
 
         mvn wildfly:undeploy
 
 
-Run the Arquillian Tests 
--------------------------
+### Verify the Quickstarts Build with One Command
+-------------------------------------------------
 
-This quickstart provides Arquillian tests. By default, these tests are configured to be skipped as Arquillian tests require the use of a container. 
+You can verify the quickstarts build using one command. However, quickstarts that have complex dependencies must be skipped. For example, the `resteasy-jaxrs-client` quickstart is a RESTEasy client that depends on the deployment of the `helloworld-rs` quickstart. As noted above, the root `pom.xml` file defines a `complex-dependencies` profile to exclude these quickstarts from the root build process. 
 
-1. Make sure you have started the JBoss EAP server as described above.
-2. Open a command prompt and navigate to the root directory of this quickstart.
-3. Type the following command to run the test goal with the following profile activated:
+To build the quickstarts:
 
-        mvn clean test -Parq-wildfly-remote 
+1. Do not start the JBoss EAP server.
+2. Open a command prompt and navigate to the root directory of the quickstarts.
+3. Use this command to build the quickstarts that do not have complex dependencies:
 
-You can also let Arquillian manage the JBoss EAP server by using the `arq-wildfly-managed` profile. For more information about how to run the Arquillian tests, see [Run the Arquillian Tests](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/RUN_ARQUILLIAN_TESTS.md#run-the-arquillian-tests).
+            mvn clean install '-Pdefault,!complex-dependencies'
+
+_Note_: If you see a `java.lang.OutOfMemoryError: PermGen space` error when you run this command, increase the memory by typing the following command for your operating system, then try the above command again.
+
+        For Linux:   export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
+        For Windows: SET MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
 
 
-Run the Quickstart in Red Hat JBoss Developer Studio or Eclipse
--------------------------------------
+### Undeploy the Deployed Quickstarts with One Command
+------------------------------------------------------
+
+To undeploy the quickstarts from the root of the quickstart folder, you must pass the argument `-fae` (fail at end) on the command line. This allows the command to continue past quickstarts that fail due to complex dependencies and quickstarts that only have Arquillian tests and do not deploy archives to the server.
+
+You can undeploy quickstarts using the following procedure:
+
+1. Start the JBoss EAP server.
+2. Open a command prompt and navigate to the root directory of the quickstarts.
+3. Use this command to undeploy any deployed quickstarts:
+
+            mvn wildfly:undeploy -fae
+
+To undeploy any quickstarts that fail due to complex dependencies, follow the undeploy procedure described in the quickstart's README file.
+
+
+Run the Quickstarts in Red Hat JBoss Developer Studio or Eclipse
+------------------------------------------------------------
+
 You can also start the server and deploy the quickstarts or run the Arquillian tests from Eclipse using JBoss tools. For general information about how to import a quickstart, add a JBoss EAP server, and build and deploy a quickstart, see [Use JBoss Developer Studio or Eclipse to Run the Quickstarts](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/USE_JBDS.md#use-jboss-developer-studio-or-eclipse-to-run-the-quickstarts). 
 
 
-Debug the Application
-------------------------------------
+Optional Components
+-------------------
+The following components are needed for only a small subset of the quickstarts. Do not install or configure them unless the quickstart requires it.
 
-If you want to debug the source code of any library in the project, run the following command to pull the source into your local repository. The IDE should then detect it.
+* [Create Users Required by the Quickstarts](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CREATE_USERS.md#create-users-required-by-the-quickstarts): Add a Management or Application user for the quickstarts that run in a secured mode.
 
-    mvn dependency:sources
-   
+* [Configure the PostgreSQL Database for Use with the Quickstarts](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CONFIGURE_POSTGRESQL_EAP7.md#configure-the-postgresql-database-for-use-with-the-quickstarts): The PostgreSQL database is used for the distributed transaction quickstarts.
+
+* [Configure Byteman for Use with the Quickstarts](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CONFIGURE_BYTEMAN.md#configure-byteman-for-use-with-the-quickstarts): This tool is used to demonstrate crash recovery for distributed transaction quickstarts.
+
+
+
